--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "hls.js": "^0.12.4",
     "iview": "^3.3.3",
     "vue": "^2.5.2",
+    "vue-aplayer": "^1.6.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
